refactor(language-web): replace generator service with API